@@ -1,3 +1,7 @@
+[B]1.0.2:[/B]
+- opravy chyb (Ivo)
+- pridano vyhledavani
+- serialy v samostatnem pluginu
 [B]1.0.1:[/B]
 - opravy chyb (Ivo)
 [B]1.0.0:[/B]
